<resources>
    <string name="app_name">LifeShare</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home_screen">Life Share</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_register">Register</string>
    <string name="action_guest">Guest></string>
    <string name="action_forgot">Forgot Password?</string>
    <string name="home_quote_string">It\'s not how much we give but how much love we put into giving."</string>
    <string name="quote">&quot;</string>
    <string name="motherTeresa">- Mother Teresa</string>
    <string name="helping_hands">Helping Hands</string>
    <string name="sharings">Sharings</string>
    <string name="ngos">NGOs</string>
    <string name="prompt_subject">Subject</string>
    <string name="prompt_desc">Description</string>
    <string name="txt_quantity">Quantity</string>
    <string name="prompt_lovation">Location</string>
    <string name="loc_change">CHANGE</string>
    <string name="prompt_date">Date &amp; Time</string>
    <string name="prompt_donate">Donated By</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="txt_attachment">Attachment</string>
    <string name="address">882 &amp; 883, 8th Main Road,\nJ P Nagar 3rd Phase,\nNear SLV Hotel,\nBengaluru,\nKarnataka 560078</string>
    <string name="fig_head">Life Share Footprints</string>
    <string name="desc">I would like to share food for fifty pax \\nin memory of my father.</string>
    <string name="date">12/Jan/2016    10:00 am</string>
</resources>
