<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bg_green"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/tv_header_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="moveBack"
            android:layout_gravity="left|center_vertical"
            android:src="@mipmap/arrow_back" />
        <ImageView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/life_share_logo" />
    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lay_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:layout_marginTop="60dp">

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_subject"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lay_desc"
        android:layout_width="match_parent"
        android:layout_below="@+id/lay_subject"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:maxLines="5"
            android:hint="@string/prompt_desc"
            android:inputType="textEmailAddress"
            android:maxLength="120" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_desc"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_quantity"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="horizontal">
        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            />
            <ImageView
                android:id="@+id/iv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:src="@mipmap/page_1" />
            </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/lay_location"
            android:layout_width="match_parent"
            android:layout_below="@+id/lay_subject"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:imeOptions=""
                android:hint="@string/prompt_lovation"
                android:inputType="textEmailAddress"
                android:maxLength="120" />

        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_gravity="right"
            android:textColor="@color/black"
            android:text="@string/loc_change"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/lay_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:hint="@string/prompt_date"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/lay_donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/donate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:hint="@string/prompt_donate"
                android:inputType="textEmailAddress"
                android:maxLength="120" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/lay_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:hint="@string/prompt_mobile"
                android:inputType="textEmailAddress"
                android:maxLength="120" />

        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay_desc"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_attachment"/>
        <ImageView
            android:id="@+id/iv_attach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:src="@mipmap/attahcments_btn" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
